stc/vcp/k8s/consolportals_sa_stc_vcp_a3gw.pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: consolportals-sa-stc-vcp-a3gw
  labels:
    component: vcp-a3gw
spec:
  containers:
    - name: vcp-a3gw
      # Fixed image name to match deployment
      image: nexus.telenity.com/com/telenity/consolportals-sa-stc-vcp-a3gw:1.0.0.2
      ports:
        - containerPort: 8444
        - containerPort: 8445
