stc/vcp/k8s/consolportals_sa_stc_vcp_ccportal.pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: consolportals-sa-stc-vcp-ccportal
  labels:
    component: vcp-ccportal
spec:
  containers:
    - name: vcp-ccportal
      image: nexus.telenity.com/com/telenity/consolportals-sa-stc-vcp-ccportal:1.0.0.2
      ports:
        - containerPort: 8081
