stc/vcp/k8s/consolportals_sa_stc_vcp_partnerportal.pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: consolportals-sa-stc-vcp-partnerportal
  labels:
    component: vcp-partnerportal
spec:
  containers:
    - name: vcp-partnerportal
      image: nexus.telenity.com/com/telenity/consolportals-sa-stc-vcp-partnerportal:1.0.0.2
      ports:
        - containerPort: 8082
