stc/vcp/k8s/consolportals_sa_stc_vcp_a3gw.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: consolportals-sa-stc-vcp-a3gw-service
  namespace: stc-vcp-services
spec:
  type: ClusterIP
  selector:
    component: vcp-a3gw
  ports:
    - name: portals
      port: 8444
      targetPort: 8444
    - name: auth
      port: 8445
      targetPort: 8445
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
