stc/vcp/k8s/consolportals_sa_stc_vcp_ccportal.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: consolportals-sa-stc-vcp-ccportal-service
  namespace: stc-vcp-services
  labels:
    app.kubernetes.io/name: vcp-ccportal
    app.kubernetes.io/part-of: consolportals
spec:
  type: ClusterIP
  selector:
    component: vcp-ccportal
  ports:
    - name: http
      port: 8081
      targetPort: 8081
