stc/vcp/k8s/consolportals_sa_stc_vcp_httpd.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: consolportals-sa-stc-vcp-httpd-service
  namespace: stc-vcp-services
spec:
  type: ClusterIP
  selector:
    component: vcp-httpd
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 443
