stc/vcp/k8s/consolportals_sa_stc_vcp_partnerportal.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: consolportals-sa-stc-vcp-partnerportal-service
  namespace: stc-vcp-services
  labels:
    app.kubernetes.io/name: vcp-partnerportal
    app.kubernetes.io/part-of: consolportals
spec:
  type: ClusterIP
  selector:
    component: vcp-partnerportal
  ports:
    - name: http
      port: 8082
      targetPort: 8082
